cabal-version: 2.2
build-type:    Simple

name:          binary-varint
version:       0.1.0.0
synopsis:      VarInt encoding/decoding via Data.Binary
homepage:      https://github.com/oscoin/ipfs
bug-reports:   https://github.com/oscoin/ipfs/issues
license:       BSD-3-Clause
license-file:  LICENSE
author:        Kim Altintop
maintainer:    Kim Altintop <kim@monadic.xyz>, Monadic Team <team@monadic.xyz>
copyright:     2018 Monadic GmbH

category:      Data

extra-source-files:
      CHANGELOG.md
    , README.md

source-repository head
    type: git
    location: https://github.com/oscoin/ipfs

common common
    default-language: Haskell2010
    ghc-options:
        -Wall
        -Wcompat
        -Wincomplete-uni-patterns
        -Wincomplete-record-updates
        -Wredundant-constraints
        -fprint-expanded-synonyms
        -funbox-small-strict-fields

library
    import: common
    hs-source-dirs: src
    exposed-modules:
        Data.Binary.VarInt

    build-depends:
        base >= 4.9 && < 5
      , binary >= 0.8.3
