cabal-version: 2.2
build-type:    Simple

name:          multihash-cryptonite
version:       0.1.0.0
synopsis:      Protocol Labs' multihash format
homepage:      https://github.com/oscoin/multiformats
bug-reports:   https://github.com/oscoin/multiformats/issues
license:       BSD-3-Clause
license-file:  LICENSE
author:        Kim Altintop
maintainer:    Kim Altintop <kim@monadic.xyz>, Monadic Team <team@monadic.xyz>
copyright:     2018 Monadic GmbH

category:      Data

extra-source-files:
      CHANGELOG.md
    , README.md

source-repository head
    type: git
    location: https://github.com/oscoin/multiformats

common common
    default-language: Haskell2010
    ghc-options:
        -Wall
        -Wcompat
        -Wincomplete-uni-patterns
        -Wincomplete-record-updates
        -Wredundant-constraints
        -fprint-expanded-synonyms
        -funbox-small-strict-fields
    default-extensions:
        DeriveGeneric
        LambdaCase
        MultiWayIf
        NamedFieldPuns
        RecordWildCards
        StrictData
        TupleSections
        TypeApplications

library
    import: common
    hs-source-dirs: src
    exposed-modules:
        Data.Multihash
        Data.Multihash.Internal
        Data.Multihash.Lazy

    build-depends:
        base >= 4.9 && < 5
      , binary >= 0.8.3
      , binary-varint
      , bytestring >= 0.10.4
      , deepseq
      , cryptonite >= 0.13
      , hashable
      , memory >= 0.11

test-suite properties
    import: common
    main-is: Main.hs
    hs-source-dirs: test/properties
    type: exitcode-stdio-1.0

    build-depends:
        base
      , cryptonite
      , hedgehog
      , multihash-cryptonite

    ghc-options:
        -threaded
        -rtsopts
        -with-rtsopts=-N

test-suite doctests
    import: common
    main-is: Main.hs
    hs-source-dirs: test/doctests
    type: exitcode-stdio-1.0

    build-depends:
        base
      , doctest
      , Glob

    ghc-options:
        -threaded
        -rtsopts
        -with-rtsopts=-N
