cabal-version: >=1.10
build-type:    Simple

name:          multihash-serialise
version:       0.1.0.0
synopsis:      CBOR encoding of multihashes
homepage:      https://github.com/oscoin/multihash
bug-reports:   https://github.com/oscoin/multihash/issues
license:       BSD3
license-file:  LICENSE
author:        Kim Altintop
maintainer:    Kim Altintop <kim@monadic.xyz>, Monadic Team <team@monadic.xyz>
copyright:     2018 Monadic GmbH

category:      Codec

extra-source-files:
      CHANGELOG.md
    , README.md

source-repository head
    type: git
    location: https://github.com/oscoin/multihash

library
    hs-source-dirs: src
    exposed-modules:
        Codec.Serialise.Multihash

    build-depends:
        base >= 4.9 && < 5
      , cryptonite > 0.13
      , memory >= 0.11
      , multihash-cryptonite
      , serialise

    ghc-options:
        -Wall
        -Wcompat
        -Wincomplete-uni-patterns
        -Wincomplete-record-updates
        -Wredundant-constraints
        -fprint-expanded-synonyms
        -funbox-small-strict-fields

    default-language: Haskell2010

test-suite properties
    main-is: Main.hs
    hs-source-dirs: test/properties
    type: exitcode-stdio-1.0

    build-depends:
        base
      , cryptonite
      , hedgehog
      , multihash-serialise
      , serialise

    ghc-options:
        -threaded
        -rtsopts
        -with-rtsopts=-N

